--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,3 +38,7 @@ html {
 * {
   -webkit-tap-highlight-color: transparent;
 }
+p, h1, h2, h3, h4, a, span {
+  overflow-wrap: anywhere;
+  word-break: break-word;
+}
